--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,6 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from form_train_data import load_data\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import spatial\n",
     "from pathlib import Path\n",
@@ -43,15 +42,45 @@
     "import numpy as np\n",
     "import itertools\n",
     "import random\n",
+    "import utils\n",
     "import math\n",
     "import cv2\n",
     "\n",
-    "data_path = Path.cwd().parent / 'datasets'\n",
-    "train_dataset_path = data_path / 'CASIA-WebFace-112x96'\n",
-    "test_dataset_path = data_path / 'lfw_112x96'\n",
+    "dataset_path = Path.cwd() / 'datasets'\n",
+    "test_dataset_path = dataset_path / 'lfw_112x96'\n",
     "\n",
     "tf.test.is_gpu_available()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'load_test_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-d6885b346d0f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_test_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtest_dataframe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtest_dataframe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'flag'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_dataframe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'flag'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'load_test_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "test_data = load_test_data(dataset_path)\n",
+    "test_dataframe = pd.DataFrame(test_data)\n",
+    "test_dataframe['flag'] = test_dataframe['flag'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -95,15 +124,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "casia_list = casia_pairs.tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -113,17 +133,17 @@
      "text": [
       "train dataframe\n",
       "                    fileL            fileR flag\n",
-      "0         0015196/021.jpg  0015196/181.jpg    1\n",
-      "1         0004960/037.jpg  0004960/010.jpg    1\n",
-      "2         1747013/045.jpg  1747013/082.jpg    1\n",
-      "3         3762213/014.jpg  3762213/165.jpg    1\n",
-      "4         0005112/028.jpg  3595501/121.jpg    0\n",
+      "0         1209966/046.jpg  1428874/001.jpg    0\n",
+      "1         1500155/371.jpg  0447695/104.jpg    0\n",
+      "2         0832314/092.jpg  2803556/035.jpg    0\n",
+      "3         0330687/001.jpg  0330687/026.jpg    1\n",
+      "4         0215281/096.jpg  0215281/079.jpg    1\n",
       "...                   ...              ...  ...\n",
-      "46852987  0121605/067.jpg  1851981/065.jpg    0\n",
-      "46852988  0001127/075.jpg  0455767/008.jpg    0\n",
-      "46852989  1011388/037.jpg  1011388/022.jpg    1\n",
-      "46852990  0847727/030.jpg  0551908/012.jpg    0\n",
-      "46852991  1065229/412.jpg  2587849/016.jpg    0\n",
+      "46852987  0000571/204.jpg  0000571/074.jpg    1\n",
+      "46852988  0000159/395.jpg  0000159/241.jpg    1\n",
+      "46852989  1013003/056.jpg  0714147/021.jpg    0\n",
+      "46852990  0386472/242.jpg  0386472/189.jpg    1\n",
+      "46852991  2440627/001.jpg  2440627/022.jpg    1\n",
       "\n",
       "[46852992 rows x 3 columns]\n"
      ]
@@ -219,42 +239,7 @@
     "\n",
     "def preprocess_image(image):\n",
     "    image = (image - 127.5) / 128\n",
-    "    return image\n",
-    "\n",
-    "\n",
-    "def train_generator(train_dataframe, batch_size_):\n",
-    "    class_mode_ = \"binary\"\n",
-    "    generator = ImageDataGenerator(preprocessing_function=preprocess_image, validation_split=0.0)\n",
-    "    \n",
-    "    train_generator_X1 = generator.flow_from_dataframe(\n",
-    "                             dataframe=train_dataframe,\n",
-    "                             directory=str(train_dataset_path) + \"/\",\n",
-    "                             x_col=\"fileL\",\n",
-    "                             y_col=\"flag\",\n",
-    "                             subset=\"training\",\n",
-    "                             batch_size=batch_size_,\n",
-    "                             seed=42,\n",
-    "                             shuffle=True,\n",
-    "                             class_mode=class_mode_,\n",
-    "                             color_mode='rgb',\n",
-    "                             target_size=(112, 96))\n",
-    "    \n",
-    "    train_generator_X2 = generator.flow_from_dataframe(\n",
-    "                             dataframe=train_dataframe,\n",
-    "                             directory=str(train_dataset_path) + \"/\",\n",
-    "                             x_col=\"fileR\",\n",
-    "                             y_col=\"flag\",\n",
-    "                             subset=\"training\",\n",
-    "                             batch_size=batch_size_,\n",
-    "                             seed=42,\n",
-    "                             shuffle=True,\n",
-    "                             class_mode=class_mode_,\n",
-    "                             color_mode='rgb',\n",
-    "                             target_size=(112, 96))\n",
-    "    while True:\n",
-    "        X1i = train_generator_X1.next()\n",
-    "        X2i = train_generator_X2.next()\n",
-    "        yield [X1i[0], X2i[0]], X1i[1]"
+    "    return image"
    ]
   },
   {
@@ -483,97 +468,45 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Train"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sd=[]\n",
-    "class LossHistory(keras.callbacks.Callback):\n",
-    "    def on_train_begin(self, logs={}):\n",
-    "        self.losses = [1,1]\n",
-    "\n",
-    "    def on_epoch_end(self, batch, logs={}):\n",
-    "        self.losses.append(logs.get('loss'))\n",
-    "        sd.append(step_decay(len(self.losses)))\n",
-    "        print(', lr:', step_decay(len(self.losses)))\n",
-    "\n",
-    "learning_rate = 0.0005\n",
-    "decay_rate = 5e-6\n",
-    "momentum = 0.9\n",
-    "batch_size_ = 32\n",
-    "images_per_epoch_ = 100000\n",
-    "\n",
-    "sgd = keras.optimizers.SGD(lr = learning_rate,\n",
-    "                           momentum = momentum, \n",
-    "                           decay = decay_rate, \n",
-    "                           nesterov=False)\n",
-    "model.compile(loss = contrastive_loss, \n",
-    "              optimizer = sgd, \n",
-    "              metrics = [accuracy])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 21/25\n",
+      "Epoch 1/5\n",
       "Found 46852992 validated image filenames belonging to 2 classes.\n",
       "Found 46852992 validated image filenames belonging to 2 classes.\n",
       "WARNING:tensorflow:From /home/paperspace/.local/lib/python3.6/site-packages/tensorflow/python/ops/math_grad.py:1250: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1243 - accuracy: 0.8349Found 5561 validated image filenames belonging to 2 classes.\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 20846201.3692 - accuracy: 0.5661Found 5561 validated image filenames belonging to 2 classes.\n",
       "Found 5561 validated image filenames belonging to 2 classes.\n",
-      ", lr: 0.0005\n",
-      "3125/3125 [==============================] - 1563s 500ms/step - loss: 0.1243 - accuracy: 0.8350 - val_loss: 0.1273 - val_accuracy: 0.8307\n",
-      "Epoch 22/25\n",
-      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1240 - accuracy: 0.8349, lr: 0.0005\n",
-      "3125/3125 [==============================] - 712s 228ms/step - loss: 0.1240 - accuracy: 0.8349 - val_loss: 0.1268 - val_accuracy: 0.8318\n",
-      "Epoch 23/25\n",
-      "1252/3125 [===========>..................] - ETA: 6:58 - loss: 0.1251 - accuracy: 0.8327"
+      "3125/3125 [==============================] - 1581s 506ms/step - loss: 20839530.5849 - accuracy: 0.5661 - val_loss: 0.2377 - val_accuracy: 0.6040\n",
+      "Epoch 2/5\n",
+      "3125/3125 [==============================] - 719s 230ms/step - loss: 5.3044 - accuracy: 0.6525 - val_loss: 0.1822 - val_accuracy: 0.7282\n",
+      "Epoch 3/5\n",
+      "3125/3125 [==============================] - 720s 230ms/step - loss: 0.3899 - accuracy: 0.6974 - val_loss: 0.1751 - val_accuracy: 0.7391\n",
+      "Epoch 4/5\n",
+      "3125/3125 [==============================] - 724s 232ms/step - loss: 1.1653 - accuracy: 0.7104 - val_loss: 0.1755 - val_accuracy: 0.7501\n",
+      "Epoch 5/5\n",
+      "3125/3125 [==============================] - 724s 232ms/step - loss: 2.5787 - accuracy: 0.7135 - val_loss: 0.1992 - val_accuracy: 0.6863\n"
      ]
     }
    ],
    "source": [
-    "def scheduler(epoch, lr):\n",
-    "    momentum=0.8\n",
-    "    decay_rate=2e-6\n",
-    "    lr = 0.0005\n",
-    "    return lr\n",
-    "    \n",
-    "def step_decay(losses):\n",
-    "    lrate=0.0005 \n",
-    "    momentum=0.8\n",
-    "    decay_rate=2e-6\n",
-    "    return lrate\n",
+    "batch_size_ = 32\n",
+    "images_per_epoch_ = 100000\n",
+    "epochs_ = 5\n",
     "\n",
-    "history = LossHistory()\n",
-    "lrate = keras.callbacks.LearningRateScheduler(scheduler)\n",
-    "callbacks_ = [history, lrate]\n",
-    "# callbacks_ = [history]\n",
-    "initial_epoch_ = 20\n",
-    "epochs_ = 25\n",
-    "\n",
+    "# https://github.com/keras-team/keras/issues/10855\n",
     "hist = model.fit(train_generator(train_dataframe, batch_size_), \n",
     "                 steps_per_epoch = images_per_epoch_ // batch_size_,\n",
     "                 epochs = epochs_,\n",
     "                 validation_data = test_generator(test_dataframe, batch_size_),\n",
     "                 validation_steps = len(test_dataframe) // batch_size_,\n",
-    "                 callbacks = callbacks_,\n",
-    "                 initial_epoch = initial_epoch_,\n",
     "                 shuffle = True)"
    ]
   },
@@ -586,13 +519,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "Found 46852992 validated image filenames belonging to 2 classes.\n",
+      "Found 46852992 validated image filenames belonging to 2 classes.\n",
+      "WARNING:tensorflow:From /home/paperspace/.local/lib/python3.6/site-packages/tensorflow/python/ops/math_grad.py:1250: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.2405 - accuracy: 0.5942Found 5561 validated image filenames belonging to 2 classes.\n",
+      "Found 5561 validated image filenames belonging to 2 classes.\n",
+      "lr: 0.01\n",
+      "3125/3125 [==============================] - 1541s 493ms/step - loss: 0.2405 - accuracy: 0.5942 - val_loss: 0.2089 - val_accuracy: 0.6671\n",
+      "Epoch 2/20\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.2050 - accuracy: 0.6755lr: 0.01\n",
+      "3125/3125 [==============================] - 697s 223ms/step - loss: 0.2050 - accuracy: 0.6755 - val_loss: 0.1804 - val_accuracy: 0.7291\n",
+      "Epoch 3/20\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1830 - accuracy: 0.7222lr: 0.01\n",
+      "3125/3125 [==============================] - 696s 223ms/step - loss: 0.1830 - accuracy: 0.7222 - val_loss: 0.1686 - val_accuracy: 0.7589\n",
+      "Epoch 4/20\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1710 - accuracy: 0.7454lr: 0.01\n",
+      "3125/3125 [==============================] - 697s 223ms/step - loss: 0.1710 - accuracy: 0.7454 - val_loss: 0.1652 - val_accuracy: 0.7611\n",
+      "Epoch 5/20\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1635 - accuracy: 0.7596lr: 0.01\n",
+      "3125/3125 [==============================] - 702s 225ms/step - loss: 0.1635 - accuracy: 0.7596 - val_loss: 0.1578 - val_accuracy: 0.7686\n",
+      "Epoch 6/20\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1596 - accuracy: 0.7670lr: 0.01\n",
+      "3125/3125 [==============================] - 703s 225ms/step - loss: 0.1596 - accuracy: 0.7670 - val_loss: 0.1559 - val_accuracy: 0.7772\n",
+      "Epoch 7/20\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1541 - accuracy: 0.7782lr: 0.01\n",
+      "3125/3125 [==============================] - 702s 225ms/step - loss: 0.1541 - accuracy: 0.7782 - val_loss: 0.1470 - val_accuracy: 0.8003\n",
+      "Epoch 8/20\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1514 - accuracy: 0.7827lr: 0.01\n",
+      "3125/3125 [==============================] - 705s 225ms/step - loss: 0.1514 - accuracy: 0.7826 - val_loss: 0.1510 - val_accuracy: 0.7811\n",
+      "Epoch 9/20\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1480 - accuracy: 0.7903lr: 0.01\n",
+      "3125/3125 [==============================] - 702s 225ms/step - loss: 0.1480 - accuracy: 0.7903 - val_loss: 0.1431 - val_accuracy: 0.8086\n",
+      "Epoch 10/20\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1463 - accuracy: 0.7927lr: 0.01\n",
+      "3125/3125 [==============================] - 702s 225ms/step - loss: 0.1462 - accuracy: 0.7927 - val_loss: 0.1406 - val_accuracy: 0.8045\n",
+      "Epoch 11/20\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1444 - accuracy: 0.7973lr: 0.01\n",
+      "3125/3125 [==============================] - 700s 224ms/step - loss: 0.1444 - accuracy: 0.7973 - val_loss: 0.1494 - val_accuracy: 0.7834\n",
+      "Epoch 12/20\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1417 - accuracy: 0.8017lr: 0.01\n",
+      "3125/3125 [==============================] - 700s 224ms/step - loss: 0.1417 - accuracy: 0.8017 - val_loss: 0.1380 - val_accuracy: 0.8048\n",
+      "Epoch 13/20\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1395 - accuracy: 0.8058lr: 0.01\n",
+      "3125/3125 [==============================] - 700s 224ms/step - loss: 0.1395 - accuracy: 0.8058 - val_loss: 0.1396 - val_accuracy: 0.8087\n",
+      "Epoch 14/20\n",
+      "3124/3125 [============================>.] - ETA: 0s - loss: 0.1388 - accuracy: 0.8069lr: 0.01\n",
+      "3125/3125 [==============================] - 700s 224ms/step - loss: 0.1388 - accuracy: 0.8069 - val_loss: 0.1398 - val_accuracy: 0.8072\n",
+      "Epoch 15/20\n",
+      " 995/3125 [========>.....................] - ETA: 7:48 - loss: 0.1359 - accuracy: 0.8146"
+     ]
+    }
+   ],
+   "source": [
+    "sd=[]\n",
+    "class LossHistory(keras.callbacks.Callback):\n",
+    "    def on_train_begin(self, logs={}):\n",
+    "        self.losses = [1,1]\n",
+    "\n",
+    "    def on_epoch_end(self, batch, logs={}):\n",
+    "        self.losses.append(logs.get('loss'))\n",
+    "        sd.append(step_decay(len(self.losses)))\n",
+    "        print('lr:', step_decay(len(self.losses)))\n",
+    "\n",
+    "learning_rate = 0.01\n",
+    "decay_rate = 5e-6\n",
+    "momentum = 0.9\n",
+    "batch_size_ = 32\n",
+    "images_per_epoch_ = 100000\n",
+    "epochs_ = 20\n",
+    "\n",
+    "sgd = keras.optimizers.SGD(lr = learning_rate,\n",
+    "                           momentum = momentum, \n",
+    "                           decay = decay_rate, \n",
+    "                           nesterov=False)\n",
+    "model.compile(loss = contrastive_loss, \n",
+    "              optimizer=sgd, \n",
+    "              metrics=[accuracy])\n",
+    "\n",
+    "def step_decay(losses):\n",
+    "    if float(2 * np.sqrt(np.array(history.losses[-1]))) < 0.3:\n",
+    "        lrate = 0.001 * 1 / (1 + 0.1 * len(history.losses))\n",
+    "        momentum = 0.8\n",
+    "        decay_rate = 2e-6\n",
+    "        return lrate\n",
+    "    else:\n",
+    "        lrate = 0.01\n",
+    "        return lrate\n",
+    "\n",
+    "history = LossHistory()\n",
+    "lrate = keras.callbacks.LearningRateScheduler(step_decay)\n",
+    "\n",
+    "hist = model.fit(train_generator(train_dataframe, batch_size_), \n",
+    "                 steps_per_epoch = images_per_epoch_ // batch_size_,\n",
+    "                 epochs = epochs_,\n",
+    "                 validation_data = test_generator(test_dataframe, batch_size_),\n",
+    "                 validation_steps = len(test_dataframe) // batch_size_,\n",
+    "                 callbacks = [history, lrate],\n",
+    "                 shuffle = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights_path = str(folder_path / 'sphereface_20_8143.h5')\n",
-    "# model.save_weights(weights_path)\n",
-    "model.load_weights(weights_path)"
+    "weights_path = str(folder_path / 'sphereface_20.h5')\n",
+    "model.save_weights(weights_path)\n",
+    "# model.load_weights(weights_path)"
    ]
   },
   {
